# python_xdf_streamer

./: .env.example  .gitignore  CROSS_PLATFORM_SETUP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  QUICKSTART.md  README.md  TODO.md  main.py  pyproject.toml  python_xdf_streamer.code-workspace  test_basic.py  test_liblsl_setup.py  test_python_xdf_streamer.ipynb
.cursor/plans/: add_.env_support_for_pylsl_lib_15b237b7.plan.md  auto-discover_script_launchers_64bcc22b.plan.md  fix_eeg_position_plot_loading_9c5ec05d.plan.md  fix_lsl_stream_creation_error_9f6acd6c.plan.md  persist_last_xdf_file_path_d45f8a62.plan.md
examples/: multi_stream_rebroadcast_example.py
scripts/: PLATFORM_FILES.md  README.md  download_liblsl.py  fix_liblsl_symlink.py  xdf-rebroadcast.bat  xdf-rebroadcast.ps1
src/: gui_main.py  main.py
src/xdf_streamer/: __init__.py  cli.py  gui_runner.py
src/xdf_streamer/core/: __init__.py  lsl_streamer.py  multi_stream_rebroadcaster.py  stream_worker.py  xdf_loader.py
src/xdf_streamer/gui/: __init__.py  main_window.py
src/xdf_streamer/models/: __init__.py  stream_info.py  xdf_data.py
src/xdf_streamer/utils/: __init__.py  format_converter.py  liblsl_setup.py  timing.py  validators.py
tests/: __init__.py  test_format_converter.py  test_lsl_streamer.py  test_multi_stream_rebroadcast.py  test_stream_worker.py  test_timing.py  test_validators.py  test_xdf_loader.py
