[project]
name = "python-xdf-streamer"
version = "0.1.0"
description = "Stream signals from XDF files to Lab Streaming Layer (LSL)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pylsl>=1.16.0",
    "pyxdf>=1.16.0",
    "numpy>=1.24.0",
    "PyQt6>=6.5.0",
    "phopylslhelper",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xdf_streamer"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv.sources]
phopylslhelper = { path = "../PhoPyLSLhelper", editable = true }


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]
